v1.5.2 - TBD
REMOVED:
  Amethyst.
   - We use vanilla Amethyst now.
   - We still spawn Amethyst Ore, and it drops a vanilla Amethyst Shard when mined.
   - If your world previously contained ADDSynth Material Amethyst or Amethyst Blocks,
      those will be replaced with vanilla Amethyst Shards and Amethyst Blocks.



v1.5.1 - February 2, 2024
NEW:
  Added JEI info for Dimensional Flux.
  Added an Auto Shutoff feature to the Plasma Generator.
  Energy Suspension Bridge lengths are now shown in the gui.
CHANGES:
  Explicitly unlock the recipes for Matter/Energy Converter and Plasma Generator when you
    pick up an Energy Crystal.
REMOVED:
  Since disabling things in the config doesn't work, it has been removed.
  Batteries will no longer transfer their energy to other Batteries on the Energy network
    when their block is removed.
    - This was the behaviour since version 1.3.4.
FIXED:
  Fixed not showing a message to players that can't access the Team Manager because they
    don't have the required permission level.
  Energy Suspension Bridges:
    - Bridge lengths are now saved with the world. If players change the maximum length
        in the config and load a world with an Energy Suspension Bridge already active,
        it will check if the new maximum length is shorter and shut itself off.
    - Now bridges that are 1 block wide and powered will properly shut themselves off if removed.
    - If two bridges along the same area are powered, the bridge that was powered first takes
        priority, and thus the bridge will be that color lens. Now the bridge's color will
        be maintained after world reload.
  Fixed elements in a gui window was not being repositioned after the game window was resized.
  Fixed not being able to insert items into the proper slots in the Magic Infuser machine.
  Fixed duplicate recipes appearing in JEI if you pressed F3 + T to reload resources.